# nbe-at-large

./: Cargo.toml  README.md
grammar/: Cargo.toml
grammar/src/: lexical.rs  lib.rs  syntactic.rs
syntax/: Cargo.toml
syntax/src/: lexical.rs  lib.rs  syntactic.rs
untyped-hoas/: Cargo.toml
untyped-hoas/src/: main.rs  syntax.pest
untyped-uid/: Cargo.toml
untyped-uid/src/: main.rs  syntax.pest
variants/revision-zero/: Cargo.toml  README.md
variants/revision-zero/src/: alpha_equality.rs  builtin.rs  equalization.rs  instantiation.rs  main.rs  term.rs  typecheck.rs  whnf.rs
