[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
pratt = "0.4.0"
error-stack = { version = "0.2.4", features = ["eyre", "std", "pretty-print", "spantrace"] }
thiserror = "1.0"